--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,12 @@ spring.datasource.url=${AIVEN_URL}
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
 
-# ????????? ??????????? ? PostgreSQL
+#  PostgreSQL
 #spring.datasource.url=jdbc:postgresql://localhost:5432/bookdb
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 
-# Hibernate ?????????
+# Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
